@@ -28,6 +28,7 @@ Version 1.0.2 to be released
 - New: Added CDefaultValueValidator (Qiang)
 - New: Implemented the behavior feature; added CBehavior, CModelBehavior and CActiveRecordBehavior (Qiang)
 - New: Added a set of new events to CActiveRecord and CFormModel (Qiang)
+- New: Added CModel::getValidatorsForAttribute (Qiang)
 
 Version 1.0.1 January 4, 2009
 -----------------------------
